fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* html,
+body {
+  width: 100%;
+} */
 
 .screen {
   position: fixed;
